--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   },
   "name": "server",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "src/index.js",
   "type": "module",
   "scripts": {
     "start": "node index.js",
